# hw-bits

./: .gitignore  .travis.yml  LICENSE  README.md  circle.yml  hw-bits.cabal  hw-succinct.cabal  package.yaml  packages.list  stack.yaml
.circleci/: config.yml
app/: Main.hs
bench/: Main.hs
src/HaskellWorks/: Function.hs
src/HaskellWorks/Data/: Bits.hs  ByteString.hs  FromByteString.hs  FromForeignRegion.hs  MonoList.hs  Positioning.hs  Search.hs  Succinct.hs  Time.hs  VectorLike.hs  Word.hs
src/HaskellWorks/Data/Attoparsec/Final/: IsChar.hs  Parser.hs
src/HaskellWorks/Data/Attoparsec/Final/IsChar/: Char.hs  Internal.hs  Word8.hs
src/HaskellWorks/Data/Attoparsec/Final/Parser/: ByteString.hs  Internal.hs  Text.hs
src/HaskellWorks/Data/Bits/: AllExcess.hs  BitFixedSize.hs  BitLength.hs  BitParse.hs  BitPatterns.hs  BitPrint.hs  BitRead.hs  BitShow.hs  BitShown.hs  BitString.hs  BitStrings.hs  BitWise.hs  Bits.hs  Broadword.hs  ByteString.hs  Conversion.hs  ElemFixedBitSize.hs  EliasFano64.hs  FixedBitSize.hs  FromBitTextByteString.hs  FromBools.hs  LoBitsSized.hs  Log2.hs  PackedVector.hs  PopCount.hs  SubWord64Vector.hs  Unmatched.hs  Word.hs  Word64.hs
src/HaskellWorks/Data/Bits/AllExcess/: AllExcess0.hs  AllExcess1.hs
src/HaskellWorks/Data/Bits/BitString/: Type.hs
src/HaskellWorks/Data/Bits/BitStrings/: Builder.hs
src/HaskellWorks/Data/Bits/BitWise/: String.hs
src/HaskellWorks/Data/Bits/Branchless/TestBit/: Word16.hs  Word32.hs  Word64.hs  Word8.hs
src/HaskellWorks/Data/Bits/Broadword/: Type.hs  Word16.hs  Word32.hs  Word64.hs  Word8.hs
src/HaskellWorks/Data/Bits/EliasFano64/: Internal.hs
src/HaskellWorks/Data/Bits/PackedVector/: Internal.hs  PackedVector64.hs
src/HaskellWorks/Data/Bits/PopCount/: PopCount0.hs  PopCount1.hs
src/HaskellWorks/Data/Bits/PopCount/PopCount1/: Broadword.hs  GHC.hs
src/HaskellWorks/Data/Bits/SubWord64Vector/: Internal.hs
src/HaskellWorks/Data/Bits/Types/: Broadword.hs  Builtin.hs
src/HaskellWorks/Data/Bits/Writer/: Storable.hs
src/HaskellWorks/Data/Conduit/: ByteString.hs  Json.hs  List.hs
src/HaskellWorks/Data/Conduit/Json/: Blank.hs  Words.hs
src/HaskellWorks/Data/Conduit/Tokenize/: Attoparsec.hs
src/HaskellWorks/Data/Conduit/Tokenize/Attoparsec/: Internal.hs  LineColumn.hs  Offset.hs
src/HaskellWorks/Data/Json/: Succinct.hs  Token.hs
src/HaskellWorks/Data/Json/Final/: Tokenize.hs
src/HaskellWorks/Data/Json/Final/Tokenize/: Internal.hs
src/HaskellWorks/Data/Json/Succinct/: Cursor.hs  Transform.hs
src/HaskellWorks/Data/Json/Succinct/Cursor/: BalancedParens.hs  BlankedJson.hs  InterestBits.hs  Internal.hs  JsonBalancedParens.hs  JsonCursorType.hs  JsonInterestBits.hs
src/HaskellWorks/Data/Json/Tokenize/: Parsec.hs
src/HaskellWorks/Data/Succinct/: BalancedParens.hs  BitParse.hs  BitPrint.hs  BitString.hs  BitWise.hs  Experimental.hs  Internal.hs  NearestNeighbour.hs  Positioning.hs  Rank9.hs  RankSelect.hs  Simple.hs
src/HaskellWorks/Data/Succinct/BalancedParens/: Internal.hs  Simple.hs
src/HaskellWorks/Data/Succinct/BitWise/: String.hs
src/HaskellWorks/Data/Succinct/RankSelect/: Basic.hs  Binary.hs  Internal.hs  Rank9.hs  Simple.hs
src/HaskellWorks/Data/Succinct/RankSelect/Basic/: Rank0.hs  Rank1.hs  Select0.hs  Select1.hs
src/HaskellWorks/Data/Succinct/RankSelect/Binary/: Poppy512.hs  Rank9.hs
src/HaskellWorks/Data/Succinct/RankSelect/Binary/Basic/: Rank0.hs  Rank1.hs  Select0.hs  Select1.hs
src/HaskellWorks/Data/Succinct/RankSelect/Binary/Rank9/: Native.hs  Positioning.hs  Storable.hs
src/HaskellWorks/Data/Succinct/RankSelect/Rank9/: Native.hs  Positioning.hs  Storable.hs
src/HaskellWorks/Data/Vector/: BoxedVectorLike.hs  StorableVectorLike.hs  VectorLike.hs
src/HaskellWorks/Diagnostics/: Time.hs
test/HaskellWorks/Data/: SuccinctSpec.hs
test/HaskellWorks/Data/Arbitrary/: Count.hs
test/HaskellWorks/Data/Bits/: BitReadSpec.hs  BitStringSpec.hs  BitWiseSpec.hs  EliasFano64Spec.hs  FromBitTextByteStringSpec.hs  FromBoolsSpec.hs  Gen.hs  Log2Spec.hs  SubWord64VectorSpec.hs  UnmatchedSpec.hs
test/HaskellWorks/Data/Bits/Broadword/: Word16Spec.hs  Word32Spec.hs  Word64Spec.hs  Word8Spec.hs
test/HaskellWorks/Data/Bits/PackedVector/: InternalSpec.hs  PackedVector64Spec.hs
test/HaskellWorks/Data/Bits/SubWord64Vector/: InternalSpec.hs
test/HaskellWorks/Data/Bits/Writer/: StorableSpec.hs
test/HaskellWorks/Data/Conduit/: ByteStringSpec.hs  JsonSpec.hs
test/HaskellWorks/Data/Conduit/Json/: BlankSpec.hs
test/HaskellWorks/Data/Conduit/Tokenize/Attoparsec/: LineColumnSpec.hs  OffsetSpec.hs
test/HaskellWorks/Data/Json/: SuccinctSpec.hs
test/HaskellWorks/Data/Json/Final/: TokenizeSpec.hs
test/HaskellWorks/Data/Json/Succinct/: CursorSpec.hs
test/HaskellWorks/Data/Json/Succinct/Cursor/: InterestBitsSpec.hs
test/HaskellWorks/Data/Succinct/: BalancedParensSpec.hs  SimpleSpec.hs
test/HaskellWorks/Data/Succinct/RankSelect/: InternalSpec.hs  Rank9Spec.hs
test/HaskellWorks/Data/Succinct/RankSelect/Binary/: BasicGen.hs  InternalSpec.hs  Poppy512Spec.hs  Rank9Spec.hs
test/HaskellWorks/Data/Succinct/RankSelect/Binary/Basic/: Rank0Spec.hs  Rank1Spec.hs  Select0Spec.hs  Select1Spec.hs
