name:                   hw-succinct
version:                0.1.0.0
synopsis:               Conduits for tokenizing streams.
description:            Please see README.md
homepage:               http://github.com/haskell-works/hw-succinct#readme
license:                BSD3
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2016 John Ky
category:               Data, Conduit
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >= 1.10

executable hw-succinct-example
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base
                      , attoparsec                      >= 0.10
                      , conduit                         >= 1.1  && < 1.3
                      , hw-succinct
                      , resourcet                       >= 1.1
  default-language:     Haskell2010

library
  hs-source-dirs:       src
  exposed-modules:      HaskellWorks.Data.Positioning
                      , HaskellWorks.Data.Succinct
                      , HaskellWorks.Data.Succinct.BalancedParens
                      , HaskellWorks.Data.Succinct.BalancedParens.Internal
                      , HaskellWorks.Data.Succinct.BalancedParens.Simple
                      , HaskellWorks.Data.Succinct.BitWise
                      , HaskellWorks.Data.Succinct.NearestNeighbour
                      , HaskellWorks.Data.Succinct.RankSelect
                      , HaskellWorks.Data.Succinct.RankSelect.Internal
                      , HaskellWorks.Data.Succinct.RankSelect.Rank9
                      , HaskellWorks.Data.Succinct.RankSelect.Rank9.Native
                      , HaskellWorks.Data.Succinct.RankSelect.Rank9.Positioning
                      , HaskellWorks.Data.Succinct.RankSelect.Rank9.Storable
                      , HaskellWorks.Data.Succinct.RankSelect.Simple
                      , HaskellWorks.Data.VectorLike
  build-depends:        base                            >= 4.7  && < 5
                      , attoparsec                      >= 0.10
                      , bytestring
                      , conduit                         >= 1.1  && < 1.3
                      , deepseq                         <  1.5
                      , QuickCheck
                      , resourcet                       >= 1.1
                      , safe
                      , text
                      , vector

  default-language:     Haskell2010
  ghc-options:          -rtsopts -with-rtsopts=-N -Wall

test-suite hw-succinct-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  other-modules:        HaskellWorks.Data.SuccinctSpec
                      , HaskellWorks.Data.Succinct.RankSelect.Rank9Spec
                      , HaskellWorks.Data.Succinct.SimpleSpec
  build-depends:        base
                      , attoparsec                      >= 0.10
                      , conduit                         >= 1.1  && < 1.3
                      , hw-succinct
                      , hspec                           >= 1.3
                      , QuickCheck
                      , resourcet                       >= 1.1
                      , vector
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-works/hw-succinct
