name:                   hw-succinct
version:                0.1.0.0
synopsis:               Conduits for tokenizing streams.
description:            Please see README.md
homepage:               http://github.com/haskell-works/hw-succinct#readme
license:                BSD3
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2016 John Ky
category:               Data, Conduit
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >= 1.10

executable hw-succinct-example
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base
                      , attoparsec                      >= 0.10
                      , conduit                         >= 1.1  && < 1.3
                      , hw-succinct
                      , resourcet                       >= 1.1
  default-language:     Haskell2010

library
  hs-source-dirs:       src
  exposed-modules:      HaskellWorks.Data.Attoparsec.Final.IsChar
                      , HaskellWorks.Data.Attoparsec.Final.IsChar.Char
                      , HaskellWorks.Data.Attoparsec.Final.IsChar.Word8
                      , HaskellWorks.Data.Attoparsec.Final.IsChar.Internal
                      , HaskellWorks.Data.Attoparsec.Final.Parser
                      , HaskellWorks.Data.Attoparsec.Final.Parser.ByteString
                      , HaskellWorks.Data.Attoparsec.Final.Parser.Internal
                      , HaskellWorks.Data.Attoparsec.Final.Parser.Text
                      , HaskellWorks.Data.Bits
                      , HaskellWorks.Data.Bits.BitParse
                      , HaskellWorks.Data.Bits.BitPrint
                      , HaskellWorks.Data.Bits.BitString
                      , HaskellWorks.Data.Bits.BitWise
                      , HaskellWorks.Data.Bits.BitWise.String
                      , HaskellWorks.Data.Bits.Conversion
                      , HaskellWorks.Data.Conduit.Json
                      , HaskellWorks.Data.Conduit.Tokenize.Attoparsec.Internal
                      , HaskellWorks.Data.Conduit.Tokenize.Attoparsec.LineColumn
                      , HaskellWorks.Data.Conduit.Tokenize.Attoparsec.Offset
                      , HaskellWorks.Data.Conduit.Tokenize.Attoparsec
                      , HaskellWorks.Data.Json.Final.Tokenize
                      , HaskellWorks.Data.Json.Final.Tokenize.Internal
                      , HaskellWorks.Data.Json.Succinct
                      , HaskellWorks.Data.Json.Succinct.Cursor
                      , HaskellWorks.Data.Json.Succinct.Transform
                      , HaskellWorks.Data.Json.Token
                      , HaskellWorks.Data.Positioning
                      , HaskellWorks.Data.Succinct
                      , HaskellWorks.Data.Succinct.BalancedParens
                      , HaskellWorks.Data.Succinct.BalancedParens.Internal
                      , HaskellWorks.Data.Succinct.BalancedParens.Simple
                      , HaskellWorks.Data.Succinct.NearestNeighbour
                      , HaskellWorks.Data.Succinct.RankSelect
                      , HaskellWorks.Data.Succinct.RankSelect.Internal
                      , HaskellWorks.Data.Succinct.RankSelect.Rank9
                      , HaskellWorks.Data.Succinct.RankSelect.Rank9.Native
                      , HaskellWorks.Data.Succinct.RankSelect.Rank9.Positioning
                      , HaskellWorks.Data.Succinct.RankSelect.Rank9.Storable
                      , HaskellWorks.Data.Succinct.RankSelect.Simple
                      , HaskellWorks.Data.VectorLike
                      , HaskellWorks.Data.Word
  build-depends:        base                            >= 4.7  && < 5
                      , attoparsec                      >= 0.10
                      , bytestring
                      , conduit                         >= 1.1  && < 1.3
                      , deepseq                         <  1.5
                      , mono-traversable
                      , parsec
                      , QuickCheck
                      , resourcet                       >= 1.1
                      , safe
                      , text
                      , vector
                      , word8

  default-language:     Haskell2010
  ghc-options:          -rtsopts -with-rtsopts=-N -Wall

test-suite hw-succinct-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  other-modules:        HaskellWorks.Data.Bits.BitStringSpec
                      , HaskellWorks.Data.Bits.BitWiseSpec
                      , HaskellWorks.Data.Conduit.JsonSpec
                      , HaskellWorks.Data.Conduit.Tokenize.Attoparsec.LineColumnSpec
                      , HaskellWorks.Data.Conduit.Tokenize.Attoparsec.OffsetSpec
                      , HaskellWorks.Data.Json.Final.TokenizeSpec
                      , HaskellWorks.Data.Json.Succinct.CursorSpec
                      , HaskellWorks.Data.Json.SuccinctSpec
                      , HaskellWorks.Data.Succinct.BalancedParensSpec
                      , HaskellWorks.Data.Succinct.RankSelect.InternalSpec
                      , HaskellWorks.Data.Succinct.RankSelect.Rank9Spec
                      , HaskellWorks.Data.Succinct.SimpleSpec
  build-depends:        base
                      , attoparsec                      >= 0.10
                      , bytestring
                      , conduit                         >= 1.1  && < 1.3
                      , hw-succinct
                      , hspec                           >= 1.3
                      , QuickCheck
                      , resourcet                       >= 1.1
                      , transformers
                      , vector
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-works/hw-succinct
